# RAG-Rerank-Intelligent-QA-Agent-for-Sweeping-Robots

./: README.md  md5.text  pyproject.toml
agent项目/: .env  pyproject.toml
agent项目/RAG/: rag_service.py  vector_store.py  vector_store_milvus.py
agent项目/RAG/chroma_agent_db/c3b3095a-53c2-46c7-ba80-8d7b43c882d9/: index_metadata.pickle
agent项目/model/: factory.py
agent项目/tools/: agent_tools.py  middleware.py  rag_agent.py
agent项目/tools/chroma_agent_db/: chroma.sqlite3
agent项目/utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
chroma_db/: chroma.sqlite3
config/: chroma.yml  prompts.yml  rag.yml
prompts/: main_prompt.txt  rag_summarize.txt
