[project]
name = "lc-learn"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "jieba>=0.42.1",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.2",
    "langchain-milvus>=0.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "nbimporter>=0.3.4",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "openai>=2.34.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "tokenizers==0.22.1",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
