[project]
name = "lc-learn"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-deepseek>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "nbimporter>=0.3.4",
    "notebook>=7.5.6",
    "openai>=2.34.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tokenizers==0.22.1",           # 添加这行
    "transformers==5.8.1",          # 添加这行
    "sentence-transformers==5.5.0", # 添加这行
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
